Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16799

Test wsrep.variables crash at sql_class.cc:639 thd_get_ha_data

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.0.35-galera
    • 10.0.36-galera
    • Galera
    • None

    Description

      Following commit introduced a test case to 10.0-galera:

      commit 648cf7176cc95f697abd8b94e860c74768680298
      Merge: 7b115181987 1ecd68d867c
      Author: Jan Lindström <jan.lindstrom@mariadb.com>
      Date:   Mon May 7 13:49:14 2018 +0300
       
          Merge remote-tracking branch 'origin/5.5-galera' into 10.0-galera
      

      But that merge commit does not introduce a regression, problem has being longer.

      Stack:

      sql/sql_class.cc:639(thd_get_ha_data)[0x55e59460c182]
      sql/log.cc:5605(THD::binlog_get_pending_rows_event(bool) const)[0x55e59492ff52]
      sql/sql_class.cc:6442(THD::binlog_flush_pending_rows_event(bool, bool))[0x55e59461ab74]
      sql/sql_class.h:2158(THD::binlog_flush_pending_rows_event(bool))[0x55e5945fb004]
      sql/sql_base.cc:989(close_thread_tables(THD*))[0x55e5945e7398]
      sql/sql_parse.cc:5651(mysql_execute_command(THD*))[0x55e5946582bb]
      sql/sql_parse.cc:7196(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55e59465bf5a]
      sql/sql_parse.cc:7019(wsrep_mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55e59465b694]
      sql/sql_parse.cc:1476(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x55e59464b268]
      sql/sql_parse.cc:1094(do_command(THD*))[0x55e594649f99]
      sql/sql_connect.cc:1394(do_handle_one_connection(THD*))[0x55e59476f997]
      sql/sql_connect.cc:1307(handle_one_connection)[0x55e59476f6e7]
      perfschema/pfs.cc:1863(pfs_spawn_thread)[0x55e594b5e4bf]
      nptl/pthread_create.c:463(start_thread)[0x7fc860773f2a]
      x86_64/clone.S:97(clone)[0x7fc85f59cedf]
      

      Reason:

      (gdb) list thd_ha_data
      Line 623 of "/home/jan/mysql/10.0-galera/sql/sql_class.cc" starts at address 0x55555599e1a2 <thd_ha_data(THD const*, handlerton const*)> and ends at 0x55555599e1ae <thd_ha_data(THD const*, handlerton const*)+12>.
      (gdb) p hton->slot
      $1 = 4294967295
      (gdb) p *hton
      $2 = {state = SHOW_OPTION_NO, db_type = DB_TYPE_BINLOG, slot = 4294967295, savepoint_offset = 8, close_connection = 0x555555cb7f90 <binlog_close_connection(handlerton*, THD*)>, kill_query = 0x0, savepoint_set = 0x555555cb9384 <binlog_savepoint_set(handlerton*, THD*, void*)>, savepoint_rollback = 0x555555cb95bd <binlog_savepoint_rollback(handlerton*, THD*, void*)>, savepoint_rollback_can_release_mdl = 0x555555cb982f <binlog_savepoint_rollback_can_release_mdl(handlerton*, THD*)>, savepoint_release = 0x0, commit = 0x555555cb8b3b <binlog_commit(handlerton*, THD*, bool)>, commit_ordered = 0x0, rollback = 0x555555cb8d3a <binlog_rollback(handlerton*, THD*, bool)>, prepare = 0x555555cb89e5 <binlog_prepare(handlerton*, THD*, bool)>, prepare_ordered = 0x0, recover = 0x0, commit_by_xid = 0x0, rollback_by_xid = 0x0, commit_checkpoint_request = 0x0, checkpoint_state = 0x0, create_cursor_read_view = 0x0, set_cursor_read_view = 0x0, close_cursor_read_view = 0x0, create = 0x0, drop_database = 0x0, panic = 0x0, start_consistent_snapshot = 0x555555cc1f86 <binlog_start_consistent_snapshot(handlerton*, THD*)>, flush_logs = 0x0, show_status = 0x0, partition_flags = 0x0, alter_table_flags = 0x0, alter_tablespace = 0x0, fill_is_table = 0x0, flags = 40, binlog_func = 0x0, binlog_log_query = 0x0, release_temporary_latches = 0x0, get_log_status = 0x0, create_iterator = 0x0, table_options = 0x0, field_options = 0x0, index_options = 0x0, tablefile_extensions = 0x55555697f598 <ha_initialize_handlerton(st_plugin_int*)::no_exts>, discover_table = 0x0, discover_table_names = 0x0, discover_table_existence = 0x0, discover_table_structure = 0x0, wsrep_abort_transaction = 0x0, wsrep_set_checkpoint = 0x0, wsrep_get_checkpoint = 0x0, wsrep_fake_trx_id = 0x0}
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.