MDEV-16799: Test wsrep.variables crash at sql_class.cc:639 thd_get_ha_data

Problem was that binlog_hton was not initialized fully when needed
i.e. when wsrep_on = true.