sql/sql_class.cc
@@ -6689,6 +6689,7 @@ int THD::binlog_query(THD::enum_binlog_query_type qtype, char const *query_arg,
   DBUG_ENTER("THD::binlog_query");
   DBUG_PRINT("enter", ("qtype: %s  query: '%-.*s'",
                        show_query_type(qtype), (int) query_len, query_arg));
+
 #ifdef WITH_WSREP
   DBUG_ASSERT(query_arg && (WSREP_EMULATE_BINLOG(this)
 			    || mysql_bin_log.is_open()));
