sql/wsrep_mysqld.h
@@ -204,6 +204,9 @@ extern void wsrep_prepend_PATH (const char* path);
 extern wsrep_seqno_t wsrep_locked_seqno;
 
 #define WSREP_ON                         \
+  (global_system_variables.wsrep_on)
+
+#define WSREP_ON_NEW                     \
   ((global_system_variables.wsrep_on) && \
    wsrep_provider                     && \
    strcmp(wsrep_provider, WSREP_NONE))
